@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-05-27T08:28:49Z",
-  "count_outdated" : 484,
-  "uniques_outdated" : 271,
-  "count" : 503,
+  "timestamp" : "2022-05-27T16:35:16Z",
+  "count_outdated" : 486,
+  "uniques_outdated" : 272,
+  "count" : 504,
   "uniques" : 284,
   "clones" : [
-    {
-      "timestamp": "2022-05-13T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-05-14T00:00:00Z",
       "count": 2,
