@@ -1,12 +1,7 @@
 {
-  "count": 19,
+  "count": 18,
   "uniques": 5,
   "clones": [
-    {
-      "timestamp": "2022-05-13T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2022-05-14T00:00:00Z",
       "count": 2,
